// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MantineInferencer should match the snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mantine-Paper-root mantine-Card-root mantine-xoj88x"
    >
      <div
        class="mantine-Group-root mantine-1dn2tzg"
      >
        <div
          class="mantine-Stack-root mantine-1xft3nm"
        >
          <div
            aria-label="breadcrumb"
            class="mantine-Breadcrumbs-root mantine-16ttirm"
          />
          <h3
            class="mantine-Text-root mantine-Title-root mantine-6hw97m"
          />
        </div>
        <div
          class="mantine-Group-root mantine-1g4q40w"
        />
      </div>
      <div
        class="mantine-1r0zdw0"
      >
        <div
          class="mantine-ScrollArea-root mantine-jghxib"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="mantine-xlwgkm mantine-ScrollArea-viewport"
            data-radix-scroll-area-viewport=""
            style="overflow-x: scroll; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <table
                class="mantine-Table-root mantine-1n3n130"
                data-hover="true"
              >
                <thead>
                  <tr>
                    <th>
                      Id
                    </th>
                    <th>
                      Title
                    </th>
                    <th>
                      Slug
                    </th>
                    <th>
                      Content
                    </th>
                    <th>
                      Hit
                    </th>
                    <th>
                      Category
                    </th>
                    <th>
                      User
                    </th>
                    <th>
                      Status
                    </th>
                    <th>
                      Status Color
                    </th>
                    <th>
                      Created At
                    </th>
                    <th>
                      Published At
                    </th>
                    <th>
                      Image
                    </th>
                    <th>
                      Tags
                    </th>
                    <th>
                      Language
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      11
                    </td>
                    <td>
                      Nobis exercitationem officia quia est.
                    </td>
                    <td>
                      provident-culpa-facere
                    </td>
                    <td>
                      <p>
                        Non velit blanditiis optio quo quaerat nam aperiam. Odit tempore consequatur vol...
                      </p>
                    </td>
                    <td>
                      920557
                    </td>
                    <td>
                      Numquam Saepe Illo
                    </td>
                    <td>
                      Eriberto Leannon
                    </td>
                    <td>
                      draft
                    </td>
                    <td>
                      orange
                    </td>
                    <td>
                      <div
                        class="mantine-Text-root mantine-1pbxw0k"
                      >
                        04/02/2022
                      </div>
                    </td>
                    <td>
                      <div
                        class="mantine-Text-root mantine-1pbxw0k"
                      >
                        08/10/2021
                      </div>
                    </td>
                    <td>
                      <div
                        class="mantine-Group-root mantine-1g4q40w"
                      >
                        <div
                          class="mantine-Image-root mantine-r5ruyt"
                          style="width: 100%;"
                        >
                          <figure
                            class="mantine-11nhzn5 mantine-Image-figure"
                          >
                            <div
                              class="mantine-qqmv3w mantine-Image-imageWrapper"
                            >
                              <img
                                class="mantine-3y8yz3 mantine-Image-image"
                                src="http://loremflickr.com/640/480/abstract"
                                style="object-fit: cover; width: 100%; height: auto;"
                              />
                            </div>
                          </figure>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="mantine-Group-root mantine-1g4q40w"
                      >
                        <div
                          class="mantine-Chip-root mantine-15po0m8"
                        >
                          <input
                            class="mantine-106387w mantine-Chip-input"
                            id="mantine-r17"
                            type="checkbox"
                            value=""
                          />
                          <label
                            class="__mantine-ref-label mantine-543i07 mantine-Chip-label"
                            data-variant="outline"
                            for="mantine-r17"
                          >
                            Nobis Et Ut
                          </label>
                        </div>
                      </div>
                    </td>
                    <td>
                      2
                    </td>
                  </tr>
                  <tr>
                    <td>
                      21
                    </td>
                    <td>
                      Eaque in nesciunt.
                    </td>
                    <td>
                      quod-quos-commodi
                    </td>
                    <td>
                      <p>
                        Ut velit quo. Sed beatae et sit ea. Perferendis pariatur doloremque deleniti sap...
                      </p>
                    </td>
                    <td>
                      175149
                    </td>
                    <td>
                      Sit Natus Voluptatibus
                    </td>
                    <td>
                      Tressie Reichel
                    </td>
                    <td>
                      published
                    </td>
                    <td>
                      lime
                    </td>
                    <td>
                      <div
                        class="mantine-Text-root mantine-1pbxw0k"
                      >
                        09/24/2022
                      </div>
                    </td>
                    <td>
                      <div
                        class="mantine-Text-root mantine-1pbxw0k"
                      >
                        09/01/2021
                      </div>
                    </td>
                    <td>
                      <div
                        class="mantine-Group-root mantine-1g4q40w"
                      >
                        <div
                          class="mantine-Image-root mantine-r5ruyt"
                          style="width: 100%;"
                        >
                          <figure
                            class="mantine-11nhzn5 mantine-Image-figure"
                          >
                            <div
                              class="mantine-qqmv3w mantine-Image-imageWrapper"
                            >
                              <img
                                class="mantine-3y8yz3 mantine-Image-image"
                                src="http://loremflickr.com/640/480/abstract"
                                style="object-fit: cover; width: 100%; height: auto;"
                              />
                            </div>
                          </figure>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="mantine-Group-root mantine-1g4q40w"
                      >
                        <div
                          class="mantine-Chip-root mantine-15po0m8"
                        >
                          <input
                            class="mantine-106387w mantine-Chip-input"
                            id="mantine-r18"
                            type="checkbox"
                            value=""
                          />
                          <label
                            class="__mantine-ref-label mantine-543i07 mantine-Chip-label"
                            data-variant="outline"
                            for="mantine-r18"
                          >
                            Error Eos Et
                          </label>
                        </div>
                        <div
                          class="mantine-Chip-root mantine-15po0m8"
                        >
                          <input
                            class="mantine-106387w mantine-Chip-input"
                            id="mantine-r19"
                            type="checkbox"
                            value=""
                          />
                          <label
                            class="__mantine-ref-label mantine-543i07 mantine-Chip-label"
                            data-variant="outline"
                            for="mantine-r19"
                          >
                            Nobis Et Ut
                          </label>
                        </div>
                      </div>
                    </td>
                    <td>
                      2
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <br />
        <div
          class="mantine-Group-root mantine-uemwr9"
          role="navigation"
        >
          <button
            aria-disabled="true"
            class="mantine-109t3tn mantine-Pagination-item"
            disabled=""
            type="button"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.219 8l3.3 3.3-.943.943L5.333 8l4.243-4.243.943.943-3.3 3.3z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            aria-current="page"
            class="mantine-109t3tn mantine-Pagination-item"
            data-active="true"
            tabindex="0"
            type="button"
          >
            1
          </button>
          <button
            aria-disabled="true"
            class="mantine-109t3tn mantine-Pagination-item"
            disabled=""
            type="button"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.781 8l-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943 3.3-3.3z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    style="height: 50px;"
  />
</DocumentFragment>
`;

exports[`MantineInferencer should match the snapshot 2`] = `
<DocumentFragment>
  <div>
    <div
      class="mantine-Paper-root mantine-Card-root mantine-xoj88x"
    >
      <div
        class="mantine-Group-root mantine-1dn2tzg"
      >
        <div
          class="mantine-Stack-root mantine-1xft3nm"
        >
          <div
            aria-label="breadcrumb"
            class="mantine-Breadcrumbs-root mantine-16ttirm"
          />
          <div
            class="mantine-Group-root mantine-1g4q40w"
          >
            <button
              class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1lgihd9"
              type="button"
            >
              <svg
                class="icon icon-tabler icon-tabler-arrow-left"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <line
                  x1="5"
                  x2="19"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="5"
                  x2="11"
                  y1="12"
                  y2="18"
                />
                <line
                  x1="5"
                  x2="11"
                  y1="12"
                  y2="6"
                />
              </svg>
            </button>
            <h3
              class="mantine-Text-root mantine-Title-root mantine-6hw97m"
            >
              Create 
            </h3>
          </div>
        </div>
        <div
          class="mantine-Group-root mantine-1g4q40w"
        />
      </div>
      <div
        class="mantine-1r0zdw0"
      >
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r8"
            id="mantine-r8-label"
          >
            Title
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-r8"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r9"
            id="mantine-r9-label"
          >
            Slug
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-r9"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-Textarea-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-Textarea-label mantine-ittua2"
            for="mantine-ra"
            id="mantine-ra-label"
          >
            Content
          </label>
          <div
            class="mantine-Input-wrapper mantine-Textarea-wrapper mantine-12sbrde"
          >
            <textarea
              aria-invalid="false"
              class="mantine-Input-input mantine-Textarea-input mantine-1cp6ct5"
              id="mantine-ra"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rb"
            id="mantine-rb-label"
          >
            Hit
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-rum3t1"
              id="mantine-rb"
              inputmode="numeric"
              step="1"
              type="text"
              value=""
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-Select-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-Select-label mantine-ittua2"
            for="mantine-rc"
            id="mantine-rc-label"
          >
            Category
          </label>
          <div
            aria-controls="mantine-rc"
            aria-expanded="false"
            aria-haspopup="listbox"
            class=""
            role="combobox"
            tabindex="-1"
          >
            <input
              type="hidden"
              value=""
            />
            <div
              class="mantine-Input-wrapper mantine-Select-wrapper mantine-12sbrde"
            >
              <input
                aria-autocomplete="list"
                aria-invalid="false"
                autocomplete="off"
                class="mantine-Input-input mantine-Select-input mantine-149ccxv"
                data-mantine-stop-propagation="false"
                id="mantine-rc"
                type="search"
                value=""
              />
              <div
                class="mantine-uquezq mantine-Input-rightSection mantine-Select-rightSection"
              >
                <svg
                  data-chevron="true"
                  fill="none"
                  height="18"
                  style="color: rgb(134, 142, 150);"
                  viewBox="0 0 15 15"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-Select-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-Select-label mantine-ittua2"
            for="mantine-re"
            id="mantine-re-label"
          >
            User
          </label>
          <div
            aria-controls="mantine-re"
            aria-expanded="false"
            aria-haspopup="listbox"
            class=""
            role="combobox"
            tabindex="-1"
          >
            <input
              type="hidden"
              value=""
            />
            <div
              class="mantine-Input-wrapper mantine-Select-wrapper mantine-12sbrde"
            >
              <input
                aria-autocomplete="list"
                aria-invalid="false"
                autocomplete="off"
                class="mantine-Input-input mantine-Select-input mantine-149ccxv"
                data-mantine-stop-propagation="false"
                id="mantine-re"
                type="search"
                value=""
              />
              <div
                class="mantine-uquezq mantine-Input-rightSection mantine-Select-rightSection"
              >
                <svg
                  data-chevron="true"
                  fill="none"
                  height="18"
                  style="color: rgb(134, 142, 150);"
                  viewBox="0 0 15 15"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-rg"
            id="mantine-rg-label"
          >
            Status
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-rg"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-rh"
            id="mantine-rh-label"
          >
            Status Color
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-rh"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-ri"
            id="mantine-ri-label"
          >
            Created At
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-ri"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-rj"
            id="mantine-rj-label"
          >
            Published At
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-rj"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-MultiSelect-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-MultiSelect-label mantine-ittua2"
            for="mantine-rk"
            id="mantine-rk-label"
          >
            Tags
          </label>
          <div
            aria-controls="mantine-rk"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="mantine-qqmv3w mantine-MultiSelect-wrapper"
            role="combobox"
            tabindex="-1"
          >
            <input
              type="hidden"
              value=""
            />
            <div
              class="mantine-Input-wrapper mantine-MultiSelect-wrapper mantine-12sbrde"
              style="overflow: hidden;"
            >
              <div
                aria-invalid="false"
                class="mantine-Input-input mantine-MultiSelect-input mantine-zunujd"
              >
                <div
                  class="mantine-j220w7 mantine-MultiSelect-values"
                >
                  <input
                    autocomplete="off"
                    class="mantine-MultiSelect-searchInput mantine-MultiSelect-searchInputEmpty mantine-zmh4e"
                    data-mantine-stop-propagation="false"
                    id="mantine-rk"
                    type="search"
                    value=""
                  />
                </div>
              </div>
              <div
                class="mantine-uquezq mantine-Input-rightSection mantine-MultiSelect-rightSection"
              >
                <svg
                  data-chevron="true"
                  fill="none"
                  height="18"
                  style="color: rgb(134, 142, 150);"
                  viewBox="0 0 15 15"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rm"
            id="mantine-rm-label"
          >
            Language
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-rum3t1"
              id="mantine-rm"
              inputmode="numeric"
              step="1"
              type="text"
              value=""
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-n0y6vz"
      >
        <button
          class="mantine-UnstyledButton-root mantine-Button-root mantine-4xmesm"
          data-button="true"
          type="button"
        >
          <div
            class="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
            >
              <svg
                class="icon icon-tabler icon-tabler-device-floppy"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <path
                  d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"
                />
                <circle
                  cx="12"
                  cy="14"
                  r="2"
                />
                <polyline
                  points="14 4 14 8 8 8 8 4"
                />
              </svg>
            </span>
            <span
              class="mantine-qo1k2 mantine-Button-label"
            >
              Save
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    style="height: 50px;"
  />
</DocumentFragment>
`;

exports[`MantineInferencer should match the snapshot 3`] = `
<DocumentFragment>
  <div>
    <div
      class="mantine-Paper-root mantine-Card-root mantine-xoj88x"
    >
      <div
        class="mantine-Group-root mantine-1dn2tzg"
      >
        <div
          class="mantine-Stack-root mantine-1xft3nm"
        >
          <div
            aria-label="breadcrumb"
            class="mantine-Breadcrumbs-root mantine-16ttirm"
          />
          <div
            class="mantine-Group-root mantine-1g4q40w"
          >
            <button
              class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1lgihd9"
              type="button"
            >
              <svg
                class="icon icon-tabler icon-tabler-arrow-left"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <line
                  x1="5"
                  x2="19"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="5"
                  x2="11"
                  y1="12"
                  y2="18"
                />
                <line
                  x1="5"
                  x2="11"
                  y1="12"
                  y2="6"
                />
              </svg>
            </button>
            <h3
              class="mantine-Text-root mantine-Title-root mantine-6hw97m"
            >
              Edit 
            </h3>
          </div>
        </div>
        <div
          class="mantine-Group-root mantine-1g4q40w"
        >
          <a
            class="mantine-Text-root mantine-Anchor-root mantine-1ut1du9"
            href="/undefined"
          >
            <button
              class="mantine-UnstyledButton-root mantine-Button-root mantine-1gzbrws"
              data-button="true"
              title=""
              type="button"
            >
              <div
                class="mantine-3xbgk5 mantine-Button-inner"
              >
                <span
                  class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-list"
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <line
                      x1="9"
                      x2="20"
                      y1="6"
                      y2="6"
                    />
                    <line
                      x1="9"
                      x2="20"
                      y1="12"
                      y2="12"
                    />
                    <line
                      x1="9"
                      x2="20"
                      y1="18"
                      y2="18"
                    />
                    <line
                      x1="5"
                      x2="5"
                      y1="6"
                      y2="6.01"
                    />
                    <line
                      x1="5"
                      x2="5"
                      y1="12"
                      y2="12.01"
                    />
                    <line
                      x1="5"
                      x2="5"
                      y1="18"
                      y2="18.01"
                    />
                  </svg>
                </span>
                <span
                  class="mantine-qo1k2 mantine-Button-label"
                />
              </div>
            </button>
          </a>
          <button
            class="mantine-UnstyledButton-root mantine-Button-root mantine-1gzbrws"
            data-button="true"
            type="button"
          >
            <div
              class="mantine-3xbgk5 mantine-Button-inner"
            >
              <span
                class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
              >
                <svg
                  class="icon icon-tabler icon-tabler-refresh"
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                    stroke="none"
                  />
                  <path
                    d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"
                  />
                  <path
                    d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"
                  />
                </svg>
              </span>
              <span
                class="mantine-qo1k2 mantine-Button-label"
              >
                Refresh
              </span>
            </div>
          </button>
        </div>
      </div>
      <div
        class="mantine-1r0zdw0"
      >
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rn"
            id="mantine-rn-label"
          >
            Id
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-Input-disabled mantine-NumberInput-disabled mantine-13fwyki"
              disabled=""
              id="mantine-rn"
              inputmode="numeric"
              step="1"
              type="text"
              value="11"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-ro"
            id="mantine-ro-label"
          >
            Title
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-ro"
              type="text"
              value="Nobis exercitationem officia quia est."
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-rp"
            id="mantine-rp-label"
          >
            Slug
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-rp"
              type="text"
              value="provident-culpa-facere"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-Textarea-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-Textarea-label mantine-ittua2"
            for="mantine-rq"
            id="mantine-rq-label"
          >
            Content
          </label>
          <div
            class="mantine-Input-wrapper mantine-Textarea-wrapper mantine-12sbrde"
          >
            <textarea
              aria-invalid="false"
              class="mantine-Input-input mantine-Textarea-input mantine-1cp6ct5"
              id="mantine-rq"
            >
              Non velit blanditiis optio quo quaerat nam aperiam. Odit tempore consequatur voluptatibus molestias. Est nemo aut. Fugit aliquam enim eveniet veritatis. Magni et aut. Consequatur aliquid rerum vero. Quaerat debitis enim magnam. Dolorem est delectus architecto et accusantium. Velit quia vero. Aut necessitatibus quia at consequatur soluta accusantium.
            </textarea>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rr"
            id="mantine-rr-label"
          >
            Hit
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-rum3t1"
              id="mantine-rr"
              inputmode="numeric"
              step="1"
              type="text"
              value="920557"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-Select-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-Select-label mantine-ittua2"
            for="mantine-rs"
            id="mantine-rs-label"
          >
            Category
          </label>
          <div
            aria-controls="mantine-rs"
            aria-expanded="false"
            aria-haspopup="listbox"
            class=""
            role="combobox"
            tabindex="-1"
          >
            <input
              type="hidden"
              value="16"
            />
            <div
              class="mantine-Input-wrapper mantine-Select-wrapper mantine-12sbrde"
            >
              <input
                aria-autocomplete="list"
                aria-invalid="false"
                autocomplete="off"
                class="mantine-Input-input mantine-Select-input mantine-149ccxv"
                data-mantine-stop-propagation="false"
                id="mantine-rs"
                type="search"
                value="Numquam Saepe Illo"
              />
              <div
                class="mantine-163ph1f mantine-Input-rightSection mantine-Select-rightSection"
              >
                <button
                  class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-tzgcu0"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-Select-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-Select-label mantine-ittua2"
            for="mantine-ru"
            id="mantine-ru-label"
          >
            User
          </label>
          <div
            aria-controls="mantine-ru"
            aria-expanded="false"
            aria-haspopup="listbox"
            class=""
            role="combobox"
            tabindex="-1"
          >
            <input
              type="hidden"
              value="21"
            />
            <div
              class="mantine-Input-wrapper mantine-Select-wrapper mantine-12sbrde"
            >
              <input
                aria-autocomplete="list"
                aria-invalid="false"
                autocomplete="off"
                class="mantine-Input-input mantine-Select-input mantine-149ccxv"
                data-mantine-stop-propagation="false"
                id="mantine-ru"
                type="search"
                value="Eriberto"
              />
              <div
                class="mantine-163ph1f mantine-Input-rightSection mantine-Select-rightSection"
              >
                <button
                  class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-tzgcu0"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r10"
            id="mantine-r10-label"
          >
            Status
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-r10"
              type="text"
              value="draft"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r11"
            id="mantine-r11-label"
          >
            Status Color
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-r11"
              type="text"
              value="orange"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r12"
            id="mantine-r12-label"
          >
            Created At
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-r12"
              type="text"
              value="2022-04-02T04:25:44.933Z"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r13"
            id="mantine-r13-label"
          >
            Published At
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-1g14e8k"
              id="mantine-r13"
              type="text"
              value="2021-08-10T08:07:39.705Z"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-MultiSelect-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-MultiSelect-label mantine-ittua2"
            for="mantine-r14"
            id="mantine-r14-label"
          >
            Tags
          </label>
          <div
            aria-controls="mantine-r14"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="mantine-qqmv3w mantine-MultiSelect-wrapper"
            role="combobox"
            tabindex="-1"
          >
            <input
              type="hidden"
              value="9"
            />
            <div
              class="mantine-Input-wrapper mantine-MultiSelect-wrapper mantine-12sbrde"
              style="overflow: hidden;"
            >
              <div
                aria-invalid="false"
                class="mantine-Input-input mantine-MultiSelect-input mantine-zunujd"
              >
                <div
                  class="mantine-j220w7 mantine-MultiSelect-values"
                >
                  <div
                    class="mantine-MultiSelect-defaultValue mantine-MultiSelect-value mantine-fqghar"
                    value="9"
                  >
                    <span
                      class="mantine-rsiguj mantine-MultiSelect-defaultValueLabel"
                    >
                      Nobis Et Ut
                    </span>
                    <button
                      aria-hidden="true"
                      class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-MultiSelect-defaultValueRemove mantine-zo2naa"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 15 15"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                  <input
                    autocomplete="off"
                    class="mantine-MultiSelect-searchInput mantine-MultiSelect-searchInputInputHidden mantine-1pfwsds"
                    data-mantine-stop-propagation="false"
                    id="mantine-r14"
                    type="search"
                    value=""
                  />
                </div>
              </div>
              <div
                class="mantine-163ph1f mantine-Input-rightSection mantine-MultiSelect-rightSection"
              >
                <button
                  class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-tzgcu0"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-e8sh7b"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-r16"
            id="mantine-r16-label"
          >
            Language
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-rum3t1"
              id="mantine-r16"
              inputmode="numeric"
              step="1"
              type="text"
              value="2"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-n0y6vz"
      >
        <button
          class="mantine-UnstyledButton-root mantine-Button-root mantine-4xmesm"
          data-button="true"
          type="button"
        >
          <div
            class="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
            >
              <svg
                class="icon icon-tabler icon-tabler-device-floppy"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <path
                  d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"
                />
                <circle
                  cx="12"
                  cy="14"
                  r="2"
                />
                <polyline
                  points="14 4 14 8 8 8 8 4"
                />
              </svg>
            </span>
            <span
              class="mantine-qo1k2 mantine-Button-label"
            >
              Save
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    style="height: 50px;"
  />
</DocumentFragment>
`;

exports[`MantineInferencer should match the snapshot 4`] = `
<DocumentFragment>
  <div>
    <div
      class="mantine-Paper-root mantine-Card-root mantine-xoj88x"
    >
      <div
        class="mantine-Group-root mantine-1dn2tzg"
      >
        <div
          class="mantine-Stack-root mantine-1xft3nm"
        >
          <div
            aria-label="breadcrumb"
            class="mantine-Breadcrumbs-root mantine-16ttirm"
          />
          <div
            class="mantine-Group-root mantine-1g4q40w"
          >
            <button
              class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1lgihd9"
              type="button"
            >
              <svg
                class="icon icon-tabler icon-tabler-arrow-left"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <line
                  x1="5"
                  x2="19"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="5"
                  x2="11"
                  y1="12"
                  y2="18"
                />
                <line
                  x1="5"
                  x2="11"
                  y1="12"
                  y2="6"
                />
              </svg>
            </button>
            <h3
              class="mantine-Text-root mantine-Title-root mantine-6hw97m"
            >
              Show 
            </h3>
          </div>
        </div>
        <div
          class="mantine-Group-root mantine-1g4q40w"
        >
          <a
            class="mantine-Text-root mantine-Anchor-root mantine-1ut1du9"
            href="/undefined"
          >
            <button
              class="mantine-UnstyledButton-root mantine-Button-root mantine-1gzbrws"
              data-button="true"
              title=""
              type="button"
            >
              <div
                class="mantine-3xbgk5 mantine-Button-inner"
              >
                <span
                  class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-list"
                    fill="none"
                    height="18"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <line
                      x1="9"
                      x2="20"
                      y1="6"
                      y2="6"
                    />
                    <line
                      x1="9"
                      x2="20"
                      y1="12"
                      y2="12"
                    />
                    <line
                      x1="9"
                      x2="20"
                      y1="18"
                      y2="18"
                    />
                    <line
                      x1="5"
                      x2="5"
                      y1="6"
                      y2="6.01"
                    />
                    <line
                      x1="5"
                      x2="5"
                      y1="12"
                      y2="12.01"
                    />
                    <line
                      x1="5"
                      x2="5"
                      y1="18"
                      y2="18.01"
                    />
                  </svg>
                </span>
                <span
                  class="mantine-qo1k2 mantine-Button-label"
                />
              </div>
            </button>
          </a>
          <button
            class="mantine-UnstyledButton-root mantine-Button-root mantine-1gzbrws"
            data-button="true"
            type="button"
          >
            <div
              class="mantine-3xbgk5 mantine-Button-inner"
            >
              <span
                class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
              >
                <svg
                  class="icon icon-tabler icon-tabler-refresh"
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                    stroke="none"
                  />
                  <path
                    d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"
                  />
                  <path
                    d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"
                  />
                </svg>
              </span>
              <span
                class="mantine-qo1k2 mantine-Button-label"
              >
                Refresh
              </span>
            </div>
          </button>
        </div>
      </div>
      <div
        class="mantine-1r0zdw0"
      >
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Id
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          11
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Title
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          Nobis exercitationem officia quia est.
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Slug
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          provident-culpa-facere
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1lbhkzp"
        >
          Content
        </h5>
        <p>
          Non velit blanditiis optio quo quaerat nam aperiam. Odit tempore consequatur voluptatibus molestias. Est nemo aut. Fugit aliquam enim eveniet veritatis. Magni et aut. Consequatur aliquid rerum vero. Quaerat debitis enim magnam. Dolorem est delectus architecto et accusantium. Velit quia vero. Aut necessitatibus quia at consequatur soluta accusantium.
        </p>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Hit
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          920,557
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Category
        </h5>
        Numquam Saepe Illo
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          User
        </h5>
        Eriberto Leannon
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Status
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          draft
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Status Color
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          orange
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Created At
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          04/02/2022
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Published At
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          08/10/2021
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Image
        </h5>
        <div
          class="mantine-Group-root mantine-1g4q40w"
        >
          <div
            class="mantine-Image-root mantine-1sqfmsp"
            style="width: 100%;"
          >
            <figure
              class="mantine-11nhzn5 mantine-Image-figure"
            >
              <div
                class="mantine-qqmv3w mantine-Image-imageWrapper"
              >
                <img
                  class="mantine-3y8yz3 mantine-Image-image"
                  src="http://loremflickr.com/640/480/abstract"
                  style="object-fit: cover; width: 100%; height: auto;"
                />
              </div>
            </figure>
          </div>
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Tags
        </h5>
        <div
          class="mantine-Group-root mantine-1g4q40w"
        >
          <div
            class="mantine-Chip-root mantine-15po0m8"
          >
            <input
              class="mantine-106387w mantine-Chip-input"
              id="mantine-r1a"
              type="checkbox"
              value=""
            />
            <label
              class="__mantine-ref-label mantine-543i07 mantine-Chip-label"
              data-variant="outline"
              for="mantine-r1a"
            >
              Error Eos Et
            </label>
          </div>
          <div
            class="mantine-Chip-root mantine-15po0m8"
          >
            <input
              class="mantine-106387w mantine-Chip-input"
              id="mantine-r1b"
              type="checkbox"
              value=""
            />
            <label
              class="__mantine-ref-label mantine-543i07 mantine-Chip-label"
              data-variant="outline"
              for="mantine-r1b"
            >
              Nobis Et Ut
            </label>
          </div>
        </div>
        <h5
          class="mantine-Text-root mantine-Title-root mantine-1sxu3jo"
        >
          Language
        </h5>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          2
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-n0y6vz"
      />
    </div>
  </div>
  <div
    style="height: 50px;"
  />
</DocumentFragment>
`;
